--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   
   <body>
   <h1>Welcome to Insy 4051!</h1>  
+  <p>This course gives you an overview of software development</p>
   </body>
   
 </html>
